# python-project-83

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: build.yml
db/: database.sql
page_analyzer/: __init__.py  app.py  checker.py  db_manager.py  validator.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  list_urls.html  show_url.html
page_analyzer/templates/includes/: footer.html  messages.html  navbar.html
