[project]
name = "hexlet-code"
version = "0.1.0"
description = "A Flask application for page analysis."
requires-python = ">=3.12.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "Flask>=3.1.2",
    "gunicorn>=23.0.0",
]
